# notes

./: xylo.yaml
backend/src/: main.rs  route.rs
frontend/app/: page.tsx
frontend/app/inbox/: page.tsx
frontend/app/inbox/new/: page.tsx
xylo/backend/: pyproject.toml
xylo/backend/src/pagekey_tasks_backend/: actions.py  db.py  info.py  notes.py  projects.py  workspace.py
xylo/frontend/: package-lock.json  package.json
xylo/frontend/src/: index.tsx
xylo/frontend/src/components/: InboxList.tsx  NoteForm.tsx
xylo/frontend/src/components/std/: Button.tsx  Link.tsx  TextArea.tsx  TextInput.tsx
xylo/frontend/src/models/: Action.ts  Note.ts  Project.ts
xylo/frontend/src/pages/: AboutPage.tsx  HomePage.tsx  InboxProcessPage.tsx
