[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pagekey-tasks-backend"
version = "0.1.0"
description = "Xylo app"
authors = []
packages = [{ include = "pagekey_tasks_backend", from="src" }]

[tool.poetry.dependencies]
python = "^3.8"
xylo = ">=0.4.0"

[tool.poetry.dev-dependencies]
